--- a/Memories_MERN/.env
+++ b/Memories_MERN/.env
@@ -1,2 +1,3 @@
 MONGO = mongodb+srv://himambasha:Himam%40123@cluster0.z46ksym.mongodb.net/memories?retryWrites=true&w=majority
 JWT_SECRETE = hghs44e45fe444frete2356poamx7894
+Hii = hello
